# squadz

./: .gitignore  .replit  BUILD_NOTES.md  Cargo.toml  README.md  docker-compose.yml  package.json  replit.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs  models.rs
backend/src/api/: crypto.rs  dashboard.rs  health.rs  locations.rs  mod.rs  squads.rs
backend/src/services/: auth.rs  location_store.rs  mod.rs  session.rs  squad_manager.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: mobile.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CreateSquad.tsx  JoinSquad.tsx  SquadMap.tsx  SquadPanel.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
