[workspace]
members = ["backend"]
resolver = "2"

# Path to omni-core-lib (adjust if publishing to crates.io)
[workspace.dependencies.omni-core-lib]
path = "../windsurf-project/omni-core/omni-core-lib"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto (from omni-core)
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Config
dotenvy = "0.15"
serde_yaml = "0.9"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
