[package]
name = "squadz-backend"
description = "Squadz GPS squad tracking backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "squadz-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Crypto
argon2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

# Config
dotenvy = { workspace = true }
serde_yaml = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Omni-core library for crypto, sessions, and federation
omni-core-lib = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
